syntax = "proto3";

package mcc.fred.trigger;
option go_package = ".;trigger";

// Represents a trigger node
service TriggerNode {
  rpc PutItemTrigger (PutItemTriggerRequest) returns (Empty);
  rpc DeleteItemTrigger (DeleteItemTriggerRequest) returns (Empty);
}

message Empty{}

message PutItemTriggerRequest {
  string keygroup = 1;
  string id = 2;
  string val = 3;
}

message DeleteItemTriggerRequest {
  string keygroup = 1;
  string id = 2;
}
